--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: BUSCOplot
-Title: What the Package Does (One Line, Title Case)
+Title: Plot Results from BUSCO
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person(given = "Brian J.", family = "Knaus", middle = "", "briank.lists@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-1665-4343"))
+Description: Plot results from BUSCO (one paragraph).
+License: GPL (>= 3) + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
