--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,10 @@ License: GPL (>= 3) + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports: 
+    dplyr,
+    ggplot2,
+    magrittr,
+    tidyr,
+    tidyselect,
+    viridisLite
